<resources>
    <string name="app_name">MovieMagic</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Welcome</string>
    <string name="second_fragment_label">Select Date</string>
    <string name="third_fragment_label">Select Time</string>
    <string name="fourth_fragment_label">Select Seat</string>
    <string name="fifth_fragment_label">Confirm</string>
    <string name="sixth_fragment_label">Payment</string>
    <string name="seventh_fragment_label">Receipt</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>